Added black background for smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     position: relative;
 }
 
+
 #vertical-centered {
     background-color: black;
     margin: 0 auto;
@@ -85,4 +86,21 @@ body {
 
 .large {
     width: 133px;
+}
+
+@media only screen and (max-width: 450px) {
+  #container {
+    background-color: black;
+  }
+  #vertical-centered {
+    background-color: black;
+    margin: 0 auto;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    width: fit-content;
+    padding: 12px;
+  }
 }
